# heartbeat_classification

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.aws/: credentials_example
.streamlit/: config.toml
app/: README.md  app.py  requirements.txt
app/page_modules/: __init__.py  cnn7_summary.txt  page_10_shap_mit.py  page_10_summary.py  page_11_shap_mit.py  page_11_shap_ptb.py  page_12_conclusion.py  page_12_shap_ptb.py  page_13_conclusion.py  page_14_authors.py  page_1_introduction.py  page_2_data_overview.py  page_3_preprocessing.py  page_4_baseline_models.py  page_4_general_modeling_overview.py  page_5_baseline_mit.py  page_6_baseline_ptb.py  page_7_dl_mit.py  page_7_dl_models.py  page_8_dl_mit.py  page_8_dl_ptb.py  page_9_dl_ptb.py  page_9_summary.py  state_utils.py  styles.py  utils.py
app/tables/: result_baseline_gridsearch.csv
docs/ProjectRequirements/: DataScientest Project Workflow.md
docs/knowledge/: ArtificialNeuralNetworkSimplified_1-D_ECG.md  ECG_Research.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_A_02_01_baseline_models_randomized_search.ipynb  03_A_02_02_baseline_models_randomized_search_sampling.ipynb  03_A_03_01_baseline_models_grid_search.ipynb  03_A_04_baseline_models_final_model_eval.ipynb  03_B_02_baseline_models_lazy_classifier.ipynb  03_B_03_baseline_models_grid_search.ipynb  03_B_04_baseline_models_final_model_eval.ipynb  03_model_testing_example.ipynb  03_model_testing_example_mit.ipynb  03_model_testing_example_ptbdb.ipynb  04_A_02_CNN_models_smote.ipynb  04_A_02_DNN_models_smote.ipynb  04_A_02_LSTM_models_smote.ipynb  04_A_03_CNN_optimization.ipynb  04_B_01_CNN_Transfer.ipynb  04_best_simple_models_grid_search.ipynb  05_A_DL_SHAP.ipynb  05_B_DL_SHAP.ipynb  README.md  j_Step_01_02.ipynb  j_Step_03-01-02_lazyclassifier_smote_ptb.ipynb  j_Step_03-01-02_no_data_augmentation.ipynb  j_Step_03-01-02_random_oversampler.ipynb  j_Step_03-01-02_smote.ipynb  j_Step_03-01-02_test_best_svm_on_ptb.ipynb  j_Step_03-03_CNN-LSTM_smote.ipynb  j_Step_03-03_CNN_smote.ipynb  j_Step_03-03_CNNtransfer.ipynb  j_Step_03-03_DNN_smote.ipynb  j_Step_03-03_LSTM_smote.ipynb  j_Step_03-03_SHAP_MIT_DL.ipynb  j_Step_03-03_SHAP_PTB_DL.ipynb
(+118 files in other folders)
